updating August description

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 August: Building a React component: UW Medicine Links App for
                 SharePoint
               </h3>
+              <p>
+                The trials and tribulations of building a React component for
+                SharePoint using Office Fabric UI Library that supports all the
+                browsers, including IE 11.
+              </p>
               <ul>
                 <li>Tuesday, August 18, 2020, 3:00 PM - 4:30 PM</li>
                 <li>
