--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
           <h2>Meeting schedule</h2>
           <ul>
             <li>
-              <h3>
-                July: No meeting
-              </h3>
+              <h3>July: No meeting</h3>
             </li>
             <li>
               <h3>
@@ -95,16 +93,32 @@
               </ul>
             </li>
             <li>
-              <h3>
-                September: JavaScript session 2: Functions
-              </h3>
+              <h3>September: No Meeting</h3>
+            </li>
+            <li>
+              <h3>October: Special guest CoP, note time change</h3>
               <ul>
-                <li>Tuesday, September 15, 2020, 3:00 PM - 4:30 PM</li>
+                <li>
+                  Tuesday, October 20, 2020, <strong>2:00 PM - 3:30 PM</strong>
+                </li>
                 <li>
                   Remote meeting via
                   <a href="#zoom-note" aria-describedby="zoom-note">Zoom *</a>
                 </li>
               </ul>
+            </li>
+            <li>
+              <h3>November: JavaScript session 2: Functions</h3>
+              <ul>
+                <li>Tuesday, November 17, 2020, 3:00 PM - 4:30 PM</li>
+                <li>
+                  Remote meeting via
+                  <a href="#zoom-note" aria-describedby="zoom-note">Zoom *</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <h3>December: No Meeting</h3>
             </li>
           </ul>
           <p id="zoom-note">
