adding techconnect message

--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
               </ul>
             </li>
             <li>
-              <h3>September: No Meeting</h3>
+              <h3>September: No regular meeting</h3>
+              <p>
+                Instead, join our 9/3/2020
+                <a
+                  href="https://www.washington.edu/techconnect/conference/networking-discussion-hour/"
+                  >discussion session at UW TechConnect</a
+                >
+              </p>
             </li>
             <li>
               <h3>October: Special guest CoP, note time change</h3>
