update for october

--- a/index.html
+++ b/index.html
@@ -72,24 +72,27 @@
           <h2>Meeting schedule</h2>
           <ul>
             <li>
-              <h3>September: No regular meeting</h3>
+              <h3>
+                October: UX and design thinking: a case study and discussion
+              </h3>
               <p>
-                Instead, join our 9/3/2020
-                <a
-                  href="https://www.washington.edu/techconnect/conference/networking-discussion-hour/"
-                  >discussion session at UW TechConnect</a
+                This month we will joining the UX and design thinking CoP for
+                their kick-off meeting where they will review the design of the
+                <a href="https://teachingremotely.washington.edu/"
+                  >UW Teaching Remotely website.</a
                 >
               </p>
-            </li>
-            <li>
-              <h3>October: Special guest CoP, note time change</h3>
               <ul>
                 <li>
                   Tuesday, October 20, 2020, <strong>2:00 PM - 3:30 PM</strong>
                 </li>
                 <li>
-                  Remote meeting via
-                  <a href="#zoom-note" aria-describedby="zoom-note">Zoom *</a>
+                  Remote meeting via Zoom See the
+                  <a
+                    href="https://wiki.cac.washington.edu/pages/viewpage.action?pageId=125259951"
+                    >UX Design wiki</a
+                  >
+                  (netid required) for more information.
                 </li>
               </ul>
             </li>
