adding winter 2021 sessions

--- a/index.html
+++ b/index.html
@@ -71,44 +71,33 @@
           <hr class="uw-divider" />
           <h2>Meeting schedule</h2>
           <ul>
+            <h3>January: Accessible Web Navigation Menus</h3>
+            <ul>
+              <li>Presented by Terrill Thompson</li>
+              <li>
+                Tuesday, January 19, 2021, 3:00 PM - 4:30 PM
+              </li>
+            </ul>
+          </li>
             <li>
-              <h3>
-                October: UX and design thinking: a case study and discussion
-              </h3>
-              <p>
-                This month we will joining the UX and design thinking CoP for
-                their kick-off meeting where they will review the design of the
-                <a href="https://teachingremotely.washington.edu/"
-                  >UW Teaching Remotely website.</a
-                >
-              </p>
+              <h3>February: UX and design thinking: topic TBD</h3>
               <ul>
                 <li>
-                  Tuesday, October 20, 2020, <strong>2:00 PM - 3:30 PM</strong>
+                  Tuesday, February 16, 2021, <strong>2:00 PM - 3:30 PM</strong>
                 </li>
-                <li>
-                  Remote meeting via Zoom See the
-                  <a
-                    href="https://wiki.cac.washington.edu/pages/viewpage.action?pageId=125259951"
-                    >UX Design wiki</a
-                  >
-                  (netid required) for more information.
-                </li>
+                <li>Note earlier meeting time for this session</li>
               </ul>
             </li>
             <li>
-              <h3>November: JavaScript session 2: Functions</h3>
+              <h3>March: Regular Expressions</h3>
               <ul>
-                <li>Tuesday, November 17, 2020, 3:00 PM - 4:30 PM</li>
+                <li>Presented by Lauren Caple and Dan Druliner</li>
                 <li>
-                  Remote meeting via
-                  <a href="#zoom-note" aria-describedby="zoom-note">Zoom *</a>
+                  Tuesday, March 16, 2021, 3:00 PM - 4:30 PM
                 </li>
               </ul>
             </li>
-            <li>
-              <h3>December: No meeting</h3>
-            </li>
+            
           </ul>
           <p id="zoom-note">
             * For Zoom meeting information, email
