--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <hr class="uw-divider" />
           <h2>Meeting schedule</h2>
           <ul>
-            <h3>January: Accessible Web Navigation Menus</h3>
+            <h3>January: Accessible web navigation menus</h3>
             <ul>
               <li>Presented by Terrill Thompson</li>
               <li>
@@ -89,7 +89,7 @@
               </ul>
             </li>
             <li>
-              <h3>March: Regular Expressions</h3>
+              <h3>March: Regular expressions</h3>
               <ul>
                 <li>Presented by Lauren Caple and Dan Druliner</li>
                 <li>
