--- a/index.html
+++ b/index.html
@@ -71,31 +71,35 @@
           <hr class="uw-divider" />
           <h2>Meeting schedule</h2>
           <ul>
-            <h3>January: Accessible web navigation menus</h3>
-            <ul>
-              <li>Presented by Terrill Thompson</li>
+            <li>
+              <h3>April: Advanced JavaScript Functions</h3>
+              <p>The third in our series covering JavaScript from the ground up, based on Marijn Haverbeke's book, <a href="https://eloquentjavascript.net/">Eloquent JavaScript</a>.</p>
+              <p>This session will focus on closure, call stack, and recursion along with a short review of scope</p>
+              <ul>
+                <li>
+                  Tuesday, April 20, 2021, 3:00 PM - 4:30 PM
+                </li>
+              </ul>
               <li>
-                Tuesday, January 19, 2021, 3:00 PM - 4:30 PM
+                <h3>May: UX and design thinking: topic TBD</h3>
+                <ul>
+                  <li>
+                    Tuesday, May 18, 2021, <strong>2:00 PM - 3:30 PM</strong>
+                  </li>
+                  <li>Note earlier meeting time for this session</li>
+                </ul>
               </li>
-            </ul>
-          </li>
-            <li>
-              <h3>February: UX and design thinking: topic TBD</h3>
-              <ul>
-                <li>
-                  Tuesday, February 16, 2021, <strong>2:00 PM - 3:30 PM</strong>
-                </li>
-                <li>Note earlier meeting time for this session</li>
-              </ul>
-            </li>
-            <li>
-              <h3>March: Regular expressions</h3>
-              <ul>
-                <li>Presented by Lauren Caple and Dan Druliner</li>
-                <li>
-                  Tuesday, March 16, 2021, 3:00 PM - 4:30 PM
-                </li>
-              </ul>
+              <li>
+                <h3>June: Code review workshop</h3>
+                <ul>
+                  <li>
+                    Tuesday, June 15, 2021, 3:00 PM - 4:30 PM
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h3>July: No meeting</h3>
+              </li>
             </li>
             
           </ul>
@@ -103,6 +107,7 @@
             * For Zoom meeting information, email
             <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
           </p>
+          <h2 id="javascript">JavaScript book review series</h2>
         </main>
       </div>
       <!-- /uw-container-inner 2 -->
