--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li>
               <h3>April: Advanced JavaScript Functions</h3>
               <p>The third in our series covering JavaScript from the ground up, based on Marijn Haverbeke's book, <a href="https://eloquentjavascript.net/">Eloquent JavaScript</a>.</p>
-              <p>This session will focus on closure, call stack, and recursion along with a short review of scope</p>
+              <p>This session will focus on closure, call stack, and recursion along with a short review of scope.</p>
               <ul>
                 <li>
                   Tuesday, April 20, 2021, 3:00 PM - 4:30 PM
@@ -107,7 +107,6 @@
             * For Zoom meeting information, email
             <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
           </p>
-          <h2 id="javascript">JavaScript book review series</h2>
         </main>
       </div>
       <!-- /uw-container-inner 2 -->
