--- a/index.html
+++ b/index.html
@@ -72,36 +72,28 @@
           <h2>Meeting schedule</h2>
           <ul>
             <li>
-              <h3>April: Advanced JavaScript Functions</h3>
-              <p>The third in our series covering JavaScript from the ground up, based on Marijn Haverbeke's book, <a href="https://eloquentjavascript.net/">Eloquent JavaScript</a>.</p>
-              <p>This session will focus on closure, call stack, and recursion along with a short review of scope.</p>
+              <h3>June</h3>
               <ul>
-                <li>
-                  Tuesday, April 20, 2021, 3:00 PM - 4:30 PM
-                </li>
+                <li>No meeting</li>
               </ul>
-              <li>
-                <h3>May: UX and design thinking: topic TBD</h3>
-                <ul>
-                  <li>
-                    Tuesday, May 18, 2021, <strong>2:00 PM - 3:30 PM</strong>
-                  </li>
-                  <li>Note earlier meeting time for this session</li>
-                </ul>
-              </li>
-              <li>
-                <h3>June: Code review workshop</h3>
-                <ul>
-                  <li>
-                    Tuesday, June 15, 2021, 3:00 PM - 4:30 PM
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <h3>July: No meeting</h3>
-              </li>
             </li>
-            
+            <li>
+              <h3>
+                July: Code sharing/review session, Griffin Wesler facilitating
+              </h3>
+              <ul>
+                <li>Tuesday, July 20, 2021, 3:00 PM - 4:30 PM</li>
+              </ul>
+            </li>
+            <li>
+              <h3>
+                August: Walk through the coding of a custom CMS with Thomas
+                Thorpe
+              </h3>
+              <ul>
+                <li>Tuesday, August 17, 2021, 3:00 PM - 4:30 PM</li>
+              </ul>
+            </li>
           </ul>
           <p id="zoom-note">
             * For Zoom meeting information, email
