--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
           <h2>Meeting schedule</h2>
           <ul>
             <li>
-              <h3>June</h3>
-              <ul>
-                <li>No meeting</li>
-              </ul>
+              <h3>June: no meeting</h3>
             </li>
             <li>
               <h3>
