--- a/index.html
+++ b/index.html
@@ -72,23 +72,28 @@
           <h2>Meeting schedule</h2>
           <ul>
             <li>
-              <h3>June: no meeting</h3>
+              <h3>September: no meeting</h3>
+              <p>Instead of meeting in September we encourage members instead to take advantage of these free conferences:
+              </p>
+                <ul>
+                 <li><a href="https://www.washington.edu/techconnect/conference/">UW IT TechConnect Conference</a> on Sept 1-2 </li>
+                 <li>for those who work in WordPress, <a href="https://www.wpcampus.org/">WP Campus</a> on Sept 21-22 </li>
+                </ul>
             </li>
             <li>
               <h3>
-                July: Code sharing/review session, Griffin Wesler facilitating
+                October: Will be joining the UX community of practice. Note the earlier meeting time:
               </h3>
               <ul>
-                <li>Tuesday, July 20, 2021, 3:00 PM - 4:30 PM</li>
+                <li>Tuesday, October 19, 2021, 2:00 PM - 3:00 PM</li>
               </ul>
             </li>
             <li>
               <h3>
-                August: Walk through the coding of a custom CMS with Thomas
-                Thorpe
+                November: A primer on Big O notation with Teri Shelton
               </h3>
               <ul>
-                <li>Tuesday, August 17, 2021, 3:00 PM - 4:30 PM</li>
+                <li>Tuesday, November 16, 2021, 3:00 PM - 4:30 PM</li>
               </ul>
             </li>
           </ul>
