--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <ul>
             <li>
               <h3>September: no meeting</h3>
-              <p>Instead of meeting in September we encourage members instead to take advantage of these free conferences:
+              <p>Instead during September we encourage members instead to take advantage of these free conferences:
               </p>
                 <ul>
                  <li><a href="https://www.washington.edu/techconnect/conference/">UW IT TechConnect Conference</a> on Sept 1-2 </li>
@@ -82,7 +82,7 @@
             </li>
             <li>
               <h3>
-                October: Will be joining the UX community of practice. Note the earlier meeting time:
+                October: we'll be joining the UX community of practice. Note the earlier meeting time:
               </h3>
               <ul>
                 <li>Tuesday, October 19, 2021, 2:00 PM - 3:00 PM</li>
@@ -90,7 +90,7 @@
             </li>
             <li>
               <h3>
-                November: A primer on Big O notation with Teri Shelton
+                November: a primer on Big O notation with Teri Shelton
               </h3>
               <ul>
                 <li>Tuesday, November 16, 2021, 3:00 PM - 4:30 PM</li>
