--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <ul>
             <li>
               <h3>September: no meeting</h3>
-              <p>Instead during September we encourage members instead to take advantage of these free conferences:
+              <p>Instead of meeting during September we encourage members to take advantage of these free conferences:
               </p>
                 <ul>
                  <li><a href="https://www.washington.edu/techconnect/conference/">UW IT TechConnect Conference</a> on Sept 1-2 </li>
