--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
               </p>
                 <ul>
                  <li><a href="https://www.washington.edu/techconnect/conference/">UW IT TechConnect Conference</a> on Sept 1-2 </li>
-                 <li>for those who work in WordPress, <a href="https://www.wpcampus.org/">WP Campus</a> on Sept 21-22 </li>
+                 <li>for those who work in WordPress, <a href="https://www.wpcampus.org/">WPCampus</a> on Sept 21-22 </li>
                 </ul>
             </li>
             <li>
               <h3>
-                October: we'll be joining the UX community of practice. Note the earlier meeting time:
+                October: we'll be joining the UX community of practice.
               </h3>
               <ul>
-                <li>Tuesday, October 19, 2021, 2:00 PM - 3:00 PM</li>
+                <li>Tuesday, October 19, 2021, <strong>2:00 PM - 3:00 PM</strong></li>
               </ul>
             </li>
             <li>
