--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </li>
             <li>
               <h3>
-                October: we'll be joining the UX community of practice.
+                October: we'll be joining the UX community of practice
               </h3>
               <ul>
                 <li>Tuesday, October 19, 2021, <strong>2:00 PM - 3:00 PM</strong></li>
