--- a/index.html
+++ b/index.html
@@ -72,28 +72,11 @@
           <h2>Meeting schedule</h2>
           <ul>
             <li>
-              <h3>September: no meeting</h3>
-              <p>Instead of meeting during September, we encourage members to take advantage of these free conferences:
-              </p>
-                <ul>
-                 <li><a href="https://www.washington.edu/techconnect/conference/">UW IT TechConnect Conference</a> on Sept 1-2 </li>
-                 <li>for those who work in WordPress, <a href="https://www.wpcampus.org/">WPCampus</a> on Sept 21-22 </li>
-                </ul>
-            </li>
-            <li>
               <h3>
-                October: we'll be joining the UX and Design Thinking community of practice
+                December 2021: Teri Shelton and Tiffany Sevareid will present on the back-end tools and processes that went into creating the new UW theme.
               </h3>
               <ul>
-                <li>Tuesday, October 19, 2021, <strong>2:00 PM - 3:00 PM</strong></li>
-              </ul>
-            </li>
-            <li>
-              <h3>
-                November: a primer on Big O notation with Teri Shelton
-              </h3>
-              <ul>
-                <li>Tuesday, November 16, 2021, 3:00 PM - 4:30 PM</li>
+                <li>Tuesday, December 14, 2021, 3:00 PM - 4:30 PM</li>
               </ul>
             </li>
           </ul>
