--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
           <ul>
             <li>
               <h3>
-                December 2021: Teri Shelton and Tiffany Sevareid will present on the back-end tools and processes that went into creating the new UW theme.
+                December 2021: new UW theme from a developer's perspective
               </h3>
+              <p>Teri Shelton and Tiffany Sevareid will present on the back-end tools and processes that went into creating the new UW theme.</p>
               <ul>
                 <li>Tuesday, December 14, 2021, 3:00 PM - 4:30 PM</li>
               </ul>
