--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>UW Front-end Technologies Community of Practice</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <div class="uw-container">
-      <header class="uw-thinstrip" role="banner">
-        <div class="uw-container--inner">
-          <div class="uw-thinstrip_container">
-            <a
-              class="uw-patch"
-              title="University of Washington Home"
-              href="http://uw.edu"
-              >University of Washington</a
-            >
-            <a aria-hidden="true" class="uw-wordmark" href="http://uw.edu"
-              >University of Washington</a
-            >
-          </div>
-          <!--
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>UW Front-end Technologies Community of Practice</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <div class="uw-container">
+    <header class="uw-thinstrip" role="banner">
+      <div class="uw-container--inner">
+        <div class="uw-thinstrip_container">
+          <a class="uw-patch" title="University of Washington Home" href="http://uw.edu">University of Washington</a>
+          <a aria-hidden="true" class="uw-wordmark" href="http://uw.edu">University of Washington</a>
+        </div>
+        <!--
             placeholder for future nav if needed
             <nav class="uw-thinstrip_nav" role="navigation" aria-label="Site navigation">
                 <ul class="elem-list">
@@ -45,50 +40,64 @@
                 </ul>
             </nav>
           -->
-        </div>
-        <!-- /uw-container-inner 1 -->
-      </header>
-
-      <div class="uw-container--inner">
-        <main class="uw-content" role="main" aria-labelledby="uwid-pageheading">
-          <h1 id="uwid-pageheading">
-            UW Front-end Technologies
-            <span class="elem-title--sub">Community of Practice</span>
-          </h1>
-
-          <p>
-            We share knowledge around front-end Web development and
-            technologies. Meeting topics will include JavaScript/CSS/HTML5
-            coding techniques, JavaScript/CSS frameworks, CSS preprocessors,
-            code editors, living style guides, linters and task management build
-            tools. Accessibility, optimization, and responsive design are common
-            themes.
-          </p>
-          <p>
-            For more information, email
-            <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
-          </p>
-          <hr class="uw-divider" />
-          <h2>Meeting schedule</h2>
-          <ul>
-            <li>
-              <h3>
-                December 2021: new UW theme from a developer's perspective
-              </h3>
-              <p>Teri Shelton and Tiffany Sevareid will present on the back-end tools and processes that went into creating the new UW theme.</p>
-              <ul>
-                <li>Tuesday, December 14, 2021, 3:00 PM - 4:30 PM</li>
-              </ul>
-            </li>
-          </ul>
-          <p id="zoom-note">
-            * For Zoom meeting information, email
-            <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
-          </p>
-        </main>
       </div>
-      <!-- /uw-container-inner 2 -->
+      <!-- /uw-container-inner 1 -->
+    </header>
+
+    <div class="uw-container--inner">
+      <main class="uw-content" role="main" aria-labelledby="uwid-pageheading">
+        <h1 id="uwid-pageheading">
+          UW Front-end Technologies
+          <span class="elem-title--sub">Community of Practice</span>
+        </h1>
+
+        <p>
+          We share knowledge around front-end Web development and
+          technologies. Meeting topics will include JavaScript/CSS/HTML5
+          coding techniques, JavaScript/CSS frameworks, CSS preprocessors,
+          code editors, living style guides, linters and task management build
+          tools. Accessibility, optimization, and responsive design are common
+          themes.
+        </p>
+        <p>
+          For more information, email
+          <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
+        </p>
+        <hr class="uw-divider" />
+        <h2>Meeting schedule</h2>
+        <ul>
+          <li>
+            <h3>
+              February 2022: The State of Front-end technologies
+            </h3>
+            <ul>
+              <li>Tuesday, February 15, 2022, 3:00 PM - 4:00 PM</li>
+            </ul>
+          </li>
+          <h3>
+            March 2022: Supply chain security
+          </h3>
+          <ul>
+            <li>Tuesday, March 15, 2022, 3:00 PM - 4:00 PM</li>
+          </ul>
+          </li>
+          <h3>
+            April 2022: We'll join the UX community of practice for their quarterly meeting
+          </h3>
+          <ul>
+            <li>Tuesday, February 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
+          </ul>
+          </li>
+        </ul>
+        <p id="zoom-note">
+          * For Zoom meeting information, email
+          <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
+        </p>
+      </main>
     </div>
-    <!-- /uw-container -->
-  </body>
+    <!-- /uw-container-inner 2 -->
+  </div>
+  <!-- /uw-container -->
+</body>
+
 </html>
