--- a/index.html
+++ b/index.html
@@ -68,25 +68,27 @@
         <ul>
           <li>
             <h3>
-              February 2022: The State of Front-end technologies
+              February 2022: The state of front-end technologies
             </h3>
             <ul>
               <li>Tuesday, February 15, 2022, 3:00 PM - 4:00 PM</li>
             </ul>
           </li>
-          <h3>
-            March 2022: Supply chain security
-          </h3>
-          <ul>
-            <li>Tuesday, March 15, 2022, 3:00 PM - 4:00 PM</li>
-          </ul>
+          <li>
+            <h3>
+              March 2022: Supply chain security
+            </h3>
+            <ul>
+              <li>Tuesday, March 15, 2022, 3:00 PM - 4:00 PM</li>
+            </ul>
           </li>
-          <h3>
-            April 2022: We'll join the UX community of practice for their quarterly meeting
-          </h3>
-          <ul>
-            <li>Tuesday, February 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
-          </ul>
+          <li>
+            <h3>
+              April 2022: We'll join the UX community of practice for their quarterly meeting
+            </h3>
+            <ul>
+              <li>Tuesday, February 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
+            </ul>
           </li>
         </ul>
         <p id="zoom-note">
