--- a/index.html
+++ b/index.html
@@ -66,28 +66,32 @@
         <hr class="uw-divider" />
         <h2>Meeting schedule</h2>
         <ul>
-          <li>
-            <h3>
-              February 2022: The state of front-end technologies
-            </h3>
-            <ul>
-              <li>Tuesday, February 15, 2022, 3:00 PM - 4:00 PM</li>
-            </ul>
-          </li>
-          <li>
-            <h3>
-              March 2022: Supply chain security
-            </h3>
-            <ul>
-              <li>Tuesday, March 15, 2022, 3:00 PM - 4:00 PM</li>
-            </ul>
-          </li>
+
+
           <li>
             <h3>
               April 2022: We'll join the UX community of practice for their quarterly meeting
             </h3>
             <ul>
               <li>Tuesday, April 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
+              <li><a href="https://wiki.cac.washington.edu/pages/viewpage.action?pageId=125259951"></a>More information
+              </li>
+            </ul>
+          </li>
+          <li>
+            <h3>
+              May 2022: Eloquent JavaScipt book club
+            </h3>
+            <ul>
+              <li>Tuesday, May 17, 2022, 3:00 PM - 4:00 PM</li>
+            </ul>
+          </li>
+          <li>
+            <h3>
+              June 2022: UW front-end tech survey results
+            </h3>
+            <ul>
+              <li>Tuesday, June 21, 2022, 3:00 PM - 4:00 PM</li>
             </ul>
           </li>
         </ul>
