--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </h3>
             <ul>
               <li>Tuesday, April 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
-              <li><a href="https://wiki.cac.washington.edu/pages/viewpage.action?pageId=125259951"></a>More information
+              <li><a href="https://wiki.cac.washington.edu/pages/viewpage.action?pageId=125259951">More information</a>
               </li>
             </ul>
           </li>
