update to index and javascript exercise page added

--- a/index.html
+++ b/index.html
@@ -67,17 +67,6 @@
         <h2>Meeting schedule</h2>
         <ul>
 
-
-          <li>
-            <h3>
-              April 2022: We'll join the UX community of practice for their quarterly meeting
-            </h3>
-            <ul>
-              <li>Tuesday, April 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
-              <li><a href="https://wiki.cac.washington.edu/pages/viewpage.action?pageId=125259951">More information</a>
-              </li>
-            </ul>
-          </li>
           <li>
             <h3>
               May 2022: Eloquent JavaScipt book club
@@ -93,6 +82,11 @@
             <ul>
               <li>Tuesday, June 21, 2022, 3:00 PM - 4:00 PM</li>
             </ul>
+          </li>
+          <li>
+            <h3>
+              July: No meeting
+            </h3>
           </li>
         </ul>
         <p id="zoom-note">
