--- a/js-exercises.html
+++ b/js-exercises.html
@@ -6,55 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript exercises</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        .content {
+            max-inline-size: 40rem;
+            margin-inline: auto;
+        }
+    </style>
+
 </head>
 
 <body>
     <main>
-        <h1>JavaScript exercises</h1>
-        <ul>
-            <li>Exercise 1 and 2 from <a href="https://eloquentjavascript.net/04_data.html#h_TcUD2vzyMe">Eloquent JS
-                    Chapter 4</a>
-                <ul>
-                    <li><a href="#range">The sum of a range</a></li>
-                    <li><a href="#reverse-array">Reversing an array</a></li>
-                </ul>
-            </li>
-            <li>From MDN's <a
-                    href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/Test_your_skills:_Object_basics">Test
-                    your Skills: Object Basics</a>
-                <ul>
-                    <li><a href="">TBD</a></li>
-                    <li><a href="">TBD</a></li>
-                </ul>
-            </li>
-        </ul>
-        <h2 id="range">The sum of a range</h2>
+        <div class="content">
+            <h1>JavaScript exercises</h1>
+            <ul>
+                <li>Exercise 1 and 2 from <a href="https://eloquentjavascript.net/04_data.html#h_TcUD2vzyMe">Eloquent JS
+                        Chapter 4</a>
+                    <ul>
+                        <li><a href="#range">The sum of a range</a></li>
+                        <li><a href="#reverse-array">Reversing an array</a></li>
+                    </ul>
+                </li>
+                <li>From MDN's <a
+                        href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/Test_your_skills:_Object_basics">Test
+                        your Skills: Object Basics</a>
+                    <ul>
+                        <li><a href="">TBD</a></li>
+                        <li><a href="">TBD</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <h2 id="range">The sum of a range</h2>
 
-        <p>The introduction of this book alluded to the following as a nice way to compute the sum of a range of
-            numbers:</p>
+            <p>The introduction of this book alluded to the following as a nice way to compute the sum of a range of
+                numbers:</p>
 
-        <code><pre>console.log(sum(range(1, 10)));</pre></code>
+            <code><pre>console.log(sum(range(1, 10)));</pre></code>
 
-        <p>Write a range function that takes two arguments, start and end, and returns an array containing all the
-            numbers from start up to (and including) end.</p>
+            <p>Write a range function that takes two arguments, start and end, and returns an array containing all the
+                numbers from start up to (and including) end.</p>
 
-        <p>Next, write a sum function that takes an array of numbers and returns the sum of these numbers. Run the
-            example program and see whether it does indeed return 55.</p>
+            <p>Next, write a sum function that takes an array of numbers and returns the sum of these numbers. Run the
+                example program and see whether it does indeed return 55.</p>
 
-        <p>
-            As a bonus assignment, modify your range function to take an optional third argument that indicates the
-            “step”
-            value used when building the array. If no step is given, the elements go up by increments of one,
-            corresponding
-            to the old behavior. The function call range(1, 10, 2) should return [1, 3, 5, 7, 9]. Make sure it also
-            works
-            with negative step values so that range(5, 2, -1) produces [5, 4, 3, 2].
-        </p>
+            <p>
+                As a bonus assignment, modify your range function to take an optional third argument that indicates the
+                “step”
+                value used when building the array. If no step is given, the elements go up by increments of one,
+                corresponding
+                to the old behavior. The function call range(1, 10, 2) should return [1, 3, 5, 7, 9]. Make sure it also
+                works
+                with negative step values so that range(5, 2, -1) produces [5, 4, 3, 2].
+            </p>
 
-        <p>Test console logs:</p>
+            <p>Test console logs:</p>
 
-        <code><pre>
+            <code><pre>
     console.log(range(1, 10));
     // → [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
@@ -65,26 +72,30 @@
     // → 55
 </pre></code>
 
-        <h2 id="reverse-array">Reversing an array</h2>
+            <h2 id="reverse-array">Reversing an array</h2>
 
-        <p>
-            Arrays have a reverse method that changes the array by inverting the order in which its elements appear. For
-            this exercise, write two functions, reverseArray and reverseArrayInPlace. The first, reverseArray, takes an
-            array as argument and produces a new array that has the same elements in the inverse order. The second,
-            reverseArrayInPlace, does what the reverse method does: it modifies the array given as argument by reversing
-            its
-            elements. Neither may use the standard reverse method.
-        </p>
+            <p>
+                Arrays have a reverse method that changes the array by inverting the order in which its elements appear.
+                For
+                this exercise, write two functions, reverseArray and reverseArrayInPlace. The first, reverseArray, takes
+                an
+                array as argument and produces a new array that has the same elements in the inverse order. The second,
+                reverseArrayInPlace, does what the reverse method does: it modifies the array given as argument by
+                reversing
+                its
+                elements. Neither may use the standard reverse method.
+            </p>
 
-        <p>
-            Thinking back to the notes about side effects and pure functions in the previous chapter, which variant do
-            you
-            expect to be useful in more situations? Which one runs faster?
-        </p>
+            <p>
+                Thinking back to the notes about side effects and pure functions in the previous chapter, which variant
+                do
+                you
+                expect to be useful in more situations? Which one runs faster?
+            </p>
 
 
-        <p>Test console logs:</p>
-        <code><pre>
+            <p>Test console logs:</p>
+            <code><pre>
     console.log(reverseArray(["A", "B", "C"]));
     // → ["C", "B", "A"];
     
@@ -93,7 +104,7 @@
     console.log(arrayValue);
     // → [5, 4, 3, 2, 1]
 </pre></code>
-
+        </div>
     </main>
 </body>
 
