--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
           </li>
           <li>
             <h3>
-              July: No meeting
+              July 2022: UX and Design Thinking community of practice
             </h3>
+            <p>We will join the UX and Design Thinking CoP for their quarterly session: </p>
+            <ul>
+              <li>Tuesday, July 19, 2022, <strong>2:00 PM - 3:00 PM</strong></li>
+            </ul>
           </li>
         </ul>
         <p id="zoom-note">
