adding links to hints and code sandbox

--- a/js-exercises.html
+++ b/js-exercises.html
@@ -82,6 +82,12 @@
     console.log(sum(range(1, 10)));
     // → 55
 </pre></code>
+            <ul>
+                <li><a href="https://eloquentjavascript.net/code/#4.1">Code sandbox for the Sum of a Range</a></li>
+                <li><a href="https://eloquentjavascript.net/04_data.html#c_gV3XCKJAqj">Hints for the Sum of a Range</a>
+                    -> Click on Display Hints
+                </li>
+            </ul>
 
             <h2 id="reverse-array">Reversing an array</h2>
 
@@ -126,6 +132,12 @@
     console.log(arrayValue);
     // → [5, 4, 3, 2, 1]
 </pre></code>
+            <ul>
+                <li><a href="https://eloquentjavascript.net/code/#4.2">Code sandbox for Reversing an Array</a></li>
+                <li><a href="https://eloquentjavascript.net/04_data.html#c_sghv5avX0H">Hints for Reversing an Array</a>
+                    -> Click on Display Hints
+                </li>
+            </ul>
 
             <h2 id="objects-1">Object basics 1</h2>
 
