--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
         <hr class="uw-divider" />
         <h2>Meeting schedule</h2>
-        <p>No meeting scheduled for July. Fall schedule to be announced.</p>
+        <p>No meeting in July 2022. Fall schedule to be announced.</p>
 
         <p id="zoom-note">
           * For Zoom meeting information, email
