--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
         <h2>Meeting schedule</h2>
         <p>No meeting in July 2022. Fall schedule to be announced.</p>
 
+        <h3>August 2022</h3>
+        <ul>
+          <li>Topic: Lean Coffee-style discussion</li>
+
+          <li>Tuesday, August 16, <strong>2:00 - 2:55 p.m. (note the new 2:00 p.m. start time)</strong></li>
+
+          <li>Join us for a lean coffee-style open discussion. <strong>Bring any front-end topic</strong> you'd like to
+            discuss to the meeting.</li>
+        </ul>
+
         <p id="zoom-note">
           * For Zoom meeting information, email
           <a href="mailto:frontend@uw.edu">frontend@uw.edu</a>.
